# audiofx-cpp

./: .gitignore  CMakeLists.txt  README.md  bld  meson.build  start.sh
include/: converter.hpp
src/: main.cpp
